# do-something

./: Cargo.toml  README.md
examples/: config.toml
src/: agent.rs  config.rs  llm.rs  main.rs  tools.rs
tests/: integration.rs
tests/common/: mock_server.rs
