[package]
name = "do-something"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "do-something"
path = "src/main.rs"

[dependencies]
agent-client-protocol = "0.11.1"
anyhow = "1"
async-stream = "0.3.6"
async-trait = "0.1"
eventsource-stream = "0.2"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "process", "fs", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt", "compat"] }
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
